--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://johanpersson.at" # the base hostname & protocol for your site
 twitter_username: suraken
-github_username:  jpersson
+github_username: jpersson
+linkedin_username: suraken
 
 # Build settings
 markdown: kramdown
