--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,6 @@ maps_api_key: AIzaSyAKZDGxodErke3nA-6BSPLytnP2sVp4f4Y
 paginate: 10
 
 gems: [jekyll-paginate]
+
+url: https://johanpersson.at
+enforce_ssl: johanpersson.at
